--- a/MbyteChat/MbyteChat.csproj
+++ b/MbyteChat/MbyteChat.csproj
@@ -14,7 +14,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="7.0.11" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="7.0.12" />
   </ItemGroup>
 
   <ItemGroup>
